# car-insurance-claims

./: README.md  _quarto.yml  pyproject.toml
src/notebooks/: carinsurance.ipynb  eda.ipynb  modeling.ipynb
src/utils/: plots.py
